MODIFIED fixed mobile overflow

--- a/css/media.css
+++ b/css/media.css
@@ -38,6 +38,9 @@
   }
 }
 @media (max-width: 1255px) {
+  body{
+    overflow-y: auto;
+  }
   .rising-item {
     max-width: 368px;
   }
